theme/totara/styles_totara.css
/* ... */
.navbar .breadcrumb .sep {
  text-indent: -1000px;
  width: 15px;
  overflow:hidden;
  display:block;
  float:left;
  background: url('images/sep_blue.gif') no-repeat center bottom;
}

.navbar .navbutton, .navbar .menu {
  margin-right: 19px;
}

.navbar .navbutton .popupform {
	padding-top: 0px !important;
}

.login-container {
  font-family: verdana, helvetica, sans-serif;
  font-size: 1em;
  letter-spacing: -0.05em;
  color: #08a3d5;
  background:url("images/bg_grn.jpg") repeat-x scroll center top #E4E4E4;
  color:#FFFFFF;
}
.login-container a,
.login-container a:link,
.login-container a:visited,
.login-container a:hover {
    color: #FFFFFF;
    font-weight: bold;
}

.loginbox,
.loginbox .subcontent { border:none; }

.loginpanel {
    padding-bottom:30px;
}

.loginbox {
    background: url("images/content_bg_blue.jpg") no-repeat scroll left top #FFFFFF;
    border: 1px solid #DDDDDD;
    -moz-border-radius: 8px;
    border-radius: 8px;
}

.navigation {
  display:none;
}

.header-search {
margin-right: 23px;
padding-bottom: 2px;
padding-left: 23px;
  background: url('images/nav_main_spacer.gif') no-repeat left 8px;
}

.header-search #coursesearch {
  margin-top: 11px;
  overflow: hidden;
}

.header-search #coursesearchbox {
  float: left;
  border: none;
	padding: 5px;
	width: 150px;
  background: url('images/search_bg_field.gif') no-repeat top left;
}

.header-search #coursesubmit {
	margin: 0 0 0 5px;
	border: 0 none;
	overflow: hidden;
	padding: 0;
	text-indent: -10000px;
	width: 28px;
	height: 21px;
  background: url('images/search_bg_submit.gif') no-repeat top left;
  font-size: 0;
  line-height: 0;
}



/***
 ***	Core: Totara Menu
 ***/

div#totara_menu {
	background:#FFFFFF url('images/nav_main_bg.jpg') repeat-x top center;
	height:72px;
	clear:both;
	margin-right:0px;
	margin-left:0px;
	margin-top:0;
	margin-bottom:0;
	padding:0;
	position:relative !important;
	border:none;
}


/* Unselected primary navigation */
div#totara_menu ul {
	padding: 0 0 0 25px;
}

div#totara_menu ul li {
	height:47px;
	white-space:nowrap;
	z-index: 9999;
	font-family: 'Trebuchet ms', verdana, helvetica, sans-serif;
	background:transparent url('images/nav_main_spacer.gif') no-repeat right 8px;
}

/* get rid of divider on last element */
div#totara_menu ul li.last {
	background:transparent;
}

/* IE compatibility? */
div#totara_menu ul li div{
	zoom:1;
}

div#totara_menu ul li a {
    color: #4C4C4C;
    text-decoration: none;
    font-size: 1.1em;
	padding: 14px 20px 3px;
	height: 30px;
	margin-left: 0;
}

/* Unselected primary navigation, hover state */
div#totara_menu ul li a:hover {
    color: #696969;
}


/* Override styles on selected tab
 * Background images applied to list and anchor to create the tab effect
 */
div#totara_menu ul li.selected {
	font-weight:normal;
	margin-left:-2px;
	background: transparent url('images/nav_main_bg_lft.jpg') no-repeat bottom left;
}

div#totara_menu ul li.selected a {
	color:#FFFFFF;
	background: transparent url('images/nav_main_bg_rgt.jpg') no-repeat bottom right;
}

/* Don't change tab color on selected primary tab */
div#totara_menu ul li.selected a:hover {
    color: #FFFFFF;
}


/* Secondary navigation
 * We need to override all styles we don't want from the primary tabs,
 * because the primary tab selectors will match the secondary tabs too.
 */

div#totara_menu ul ul {
	padding:0;
	margin:0;
	position:absolute;
	background:transparent;
	width:900px;
	top:47px;
	left:0px;
	z-index: 1000;
}


/* Unselected secondary navigation */
div#totara_menu ul li.selected ul li {
	list-style:none;
	float:left;
	background:transparent url('images/nav_sub_spacer.gif') no-repeat right center;
	height: 23px;
	font-size:0.9em;
	display:block;
}

/* get rid of divider on last element */
div#totara_menu ul li.selected ul li.last {
    background: transparent;
}

div#totara_menu ul li.selected ul li a {
	margin:0;
	padding: 0 20px;
	display:block;
	height: 23px;
	color:#FFFFFF;
	background:transparent;
}


/* Unselected secondary navigation, hover state */
div#totara_menu ul li.selected ul li a:hover {
	color:#CFCFCF;
}


/* Don't indicate link on selected secondary tab */
div#totara_menu ul li.selected ul li.selected a {
    font-weight: bold;
    cursor: default;
    background:transparent url('images/tab_indent.gif') no-repeat bottom center;
}

div#totara_menu ul li.selected ul li.selected a:hover {
    color: #EFEFEF;
}

/**
 * Footer Styles
 **/

#footer {
	position: absolute;
	bottom: 0;
	background: url("images/footer_bg_grn.jpg") repeat-x scroll center top #7D8412;
	width: 930px;
	padding:6px 15px;
	border:none;
}

#footer .sitelink,
#footer .homelink,
#footer .footerlinks ul li ul {
  display: none;
}

#footer .logininfo {
	display:none;
	font-size: 0.8em;
}

#footer .footerlinks ul {
	margin:2px 0 10px 0;
}
#footer .footerlinks ul li {
  display:inline;
  list-style-type: none;
  background: url('images/nav_ftr_spacer.gif') no-repeat right center;
}
#footer .footerlinks ul li.selected a {
  font-weight:normal;
}

#footer .footerlinks ul li.last {
  background:none;
}

#footer .footerlinks li div a {
  font-family: 'Trebuchet ms', verdana, helvetica, sans-serif;
  color: #FFFFFF;
}

#footer .validators {
    margin-top: 15px;
}

#footer .validators ul li a:link,
#footer .validators ul li a:visited,
#footer .validators ul li a:hover {
	color:#CBCF81;
}

#footer .performanceinfo {
    text-align: center;
}

/**
    Action notifications
**/
div#totara-header-notifications .notifyproblem {
  text-align:left !important;
  background:url("images/cross.gif") no-repeat scroll 10px center #F6BEBF;
}

div#totara-header-notifications .notifysuccess {
  text-align:left !important;
  background:url("images/tick.gif") no-repeat scroll 10px center #CFF1B4;
}
/* ... */

